force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/ucinn_ascendv2__Designation_Detail__c.object-meta.xml
<CustomObject>
    <description>Keeps track of designations for a specific payment/pledge/gift.</description>
    <label>Designation Detail</label>
    <nameField>
        <label>Designation Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Designation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>