force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Campaign_Extension__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Extension__c</fullName>
    <formula>ucinn_ascendv2__Campaign__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Extension</label>
    <type>Text</type>
</CustomField>