force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Final_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Installment_Date__c</fullName>
    <label>Final Installment Date</label>
    <summarizedField>ucinn_ascendv2__Installment__c.ucinn_ascendv2__Expected_Date__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Installment__c.ucinn_ascendv2__Designation_Detail__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>