force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Fund_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fund_Number_Formula__c</fullName>
    <formula>ucinn_ascendv2__Designation__r.Name</formula>
    <label>Fund Number Formula</label>
    <type>Text</type>
</CustomField>