force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Is_User_College__c.field-meta.xml
<CustomField>
    <fullName>Is_User_College__c</fullName>
    <formula>If(TEXT($User.College__c) = ucinn_ascendv2__Designation__r.ucinn_ascendv2__X1_Academic_Org_Name_Formula__c ,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User College</label>
    <type>Checkbox</type>
</CustomField>