force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ISU_Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>ISU_Discount_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISU Discount Applied</label>
    <type>Checkbox</type>
</CustomField>