force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number__c</fullName>
    <label>Membership Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>