force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Multi__c.field-meta.xml
<CustomField>
    <fullName>Multi__c</fullName>
    <label>Multi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Multi</valueSetName>
    </valueSet>
</CustomField>