force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Next_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Next_Installment_Amount__c</fullName>
    <description>Used in a scheduled rollup helper</description>
    <inlineHelpText>Amount of the Next unpaid installment, updated daily at 6:00 pm.</inlineHelpText>
    <label>Next Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>