force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Next_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Installment_Date__c</fullName>
    <label>Next Installment Date</label>
    <summarizedField>ucinn_ascendv2__Installment__c.ucinn_ascendv2__Expected_Date__c</summarizedField>
    <summaryFilterItems>
        <field>ucinn_ascendv2__Installment__c.ucinn_ascendv2__Expected_Less_Payment_Amount_Formula__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>ucinn_ascendv2__Installment__c.ucinn_ascendv2__Designation_Detail__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>