force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Preferred_Communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Communication__c</fullName>
    <label>Preferred Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Preferred_Communication</valueSetName>
    </valueSet>
</CustomField>