force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/Send_Notice__c.field-meta.xml
<CustomField>
    <fullName>Send_Notice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Notice</label>
    <type>Checkbox</type>
</CustomField>