force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Account_Recipient__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Recipient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Designation Details (Organization Recipient)</relationshipLabel>
    <relationshipName>Designation_Details_Account_Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>