force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Amount_Paid_to_Date_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Paid_to_Date_Roll_Up__c</fullName>
    <description>This is aggregation of Amount_Paid_to_Date for that Designation Detail including Designation Detail mismatches. Amount_Paid_to_Date can be either the Payment_Amount__c or Face_Value__c.</description>
    <label>Amount Paid to Date</label>
    <summarizedField>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Amount_Paid_to_Date__c</summarizedField>
    <summaryFilterItems>
        <field>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Is_Voided__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Designation_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>