force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Amount_to_be_Matched__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_to_be_Matched__c</fullName>
    <description>The amount that is being matched, not the total amount that is to be matched (before considering matching ratio).</description>
    <inlineHelpText>The amount that is being matched, not the total amount that is to be matched (before considering matching ratio).</inlineHelpText>
    <label>Amount to be Matched</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>