force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Amt_Paid_to_Date_Same_Desig_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amt_Paid_to_Date_Same_Desig_Roll_Up__c</fullName>
    <description>Amount paid to date rollup is the rolup of Payment__c.Amount_Paid_to_Date_Rollup_Amount. It is the total amount paid/face_value for the designations that are same as the opportunity</description>
    <label>Amount Paid to Date (Same Designation)</label>
    <summarizedField>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Amount_Paid_to_Date_Same_Designation__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Designation_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>