force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Automatic_Payments_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Automatic_Payments_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Payments Enabled</label>
    <type>Checkbox</type>
</CustomField>