force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>That Designation is not currently active.</errorMessage>
        <filterItems>
            <field>ucinn_ascendv2__Designation__c.ucinn_ascendv2__Status_Formula__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>ucinn_ascendv2__Designation__c.Name</field>
            <operation>startsWith</operation>
            <value>2, 3, 4, 5, 6, 7, 8, 9</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Designation Details</relationshipLabel>
    <relationshipName>Designation_Details_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>