force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Designation_Unit_1_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Unit_1_Formula__c</fullName>
    <formula>ucinn_ascendv2__Designation__r.ucinn_ascendv2__Unit_1__c</formula>
    <label>Designation Unit 1</label>
    <type>Text</type>
</CustomField>