force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Designation_Unit_2_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Unit_2_Amount_Formula__c</fullName>
    <formula>(ucinn_ascendv2__Amount__c * ucinn_ascendv2__Designation__r.ucinn_ascendv2__Unit_2_Percentage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation Unit 2 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>