force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Designation_Unit_2_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_Unit_2_Formula__c</fullName>
    <formula>ucinn_ascendv2__Designation__r.ucinn_ascendv2__Unit_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation Unit 2</label>
    <type>Text</type>
</CustomField>