force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Discount_Percentage__c</fullName>
    <label>Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>