force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__First_Pledge_Gift_Payment_Date_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__First_Pledge_Gift_Payment_Date_Roll_Up__c</fullName>
    <description>Date first payment was received.</description>
    <inlineHelpText>Date first payment was received.</inlineHelpText>
    <label>First Pledge / Gift Payment Date</label>
    <summarizedField>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Credit_Date__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Designation_Detail__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>