force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Date__c</fullName>
    <label>Gift Date (DEPRECATED)</label>
    <type>Date</type>
</CustomField>