force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Has_Tax_Receipt__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Has_Tax_Receipt__c</fullName>
    <defaultValue>true</defaultValue>
    <description>for outright gift processing input</description>
    <label>Has Tax Receipt</label>
    <type>Checkbox</type>
</CustomField>