force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Is_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for outright gift processing input</description>
    <label>Is Anonymous</label>
    <type>Checkbox</type>
</CustomField>