force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Joint_Recipient__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Joint_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Joint Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Designation Details (Joint Recipient)</relationshipLabel>
    <relationshipName>Designation_Details_Joint_Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>