force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Membership_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Level</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Membership Level</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Designation Details (Membership Level)</relationshipLabel>
    <relationshipName>Designation_Details_Membership_Level</relationshipName>
    <type>Lookup</type>
</CustomField>