force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Next_Installment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Next_Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the record for the next unpaid installment. If all installments are fully paid, there should be no value here.</description>
    <inlineHelpText>Displays the record for the next unpaid installment. If all installments are fully paid, there should be no value here.</inlineHelpText>
    <label>Next Installment</label>
    <referenceTo>ucinn_ascendv2__Installment__c</referenceTo>
    <relationshipLabel>Designation Details</relationshipLabel>
    <relationshipName>Designation_Details_Next_Installment</relationshipName>
    <type>Lookup</type>
</CustomField>