force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Non_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_Gift_Amount__c</fullName>
    <label>Non-Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>