force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Non_Gift_Amount_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Non_Gift_Amount_Roll_Up__c</fullName>
    <description>Sum of Non_Gift_Amount__c for all child payments of the designation detail.</description>
    <inlineHelpText>Sum of Non_Gift_Amount__c for all child payments of the designation detail.</inlineHelpText>
    <label>Non-Gift Amount</label>
    <summarizedField>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Non_Gift_Amount__c</summarizedField>
    <summaryForeignKey>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Designation_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>