force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Number_of_Payments_to_Date_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Payments_to_Date_Roll_Up__c</fullName>
    <label>Number of Payments to Date</label>
    <summaryForeignKey>ucinn_ascendv2__Payment__c.ucinn_ascendv2__Designation_Detail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>