force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <label>Pledge / Gift</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Designation Details</relationshipLabel>
    <relationshipName>Designation_Details_Opportunity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>