force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Original_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Original_Expiration_Date__c</fullName>
    <label>Original Expiration Date</label>
    <type>Date</type>
</CustomField>