force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Pledge_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Date_Formula__c</fullName>
    <formula>ucinn_ascendv2__Opportunity__r.ucinn_ascendv2__Credit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge / Gift Date</label>
    <type>Date</type>
</CustomField>