force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Pledge_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Pledge_Status_Formula__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge / Gift Status</label>
    <type>Text</type>
</CustomField>