force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Premium__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Premium__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premium</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Package</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Designation Details</relationshipLabel>
    <relationshipName>Designation_Details_Premium</relationshipName>
    <type>Lookup</type>
</CustomField>