force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Premium_Available__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Premium_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium Available</label>
    <type>Checkbox</type>
</CustomField>