force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Recipient__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Designation Details (Recipient)</relationshipLabel>
    <relationshipName>Designation_Details_Recipient</relationshipName>
    <type>Lookup</type>
</CustomField>