force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Remaining_Amount_Due_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Remaining_Amount_Due_Formula__c</fullName>
    <description>It is the net remaining amount due foe the opportunity considering the total amount paid for that opportunity</description>
    <formula>IF (
AND ( ucinn_ascendv2__Amount_Paid_to_Date_Roll_Up__c &gt;= 0, ( ucinn_ascendv2__Amount_Paid_to_Date_Roll_Up__c  &lt; ucinn_ascendv2__Amount__c )),
( ucinn_ascendv2__Amount__c - ucinn_ascendv2__Amount_Paid_to_Date_Roll_Up__c ),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>