force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Remaining_Amt_Same_Designation_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Remaining_Amt_Same_Designation_Formula__c</fullName>
    <description>It is the remaining amount for the opportunity considering only the payments whose Designation is same as the ones in the opportunity.</description>
    <formula>IF (
AND (  ucinn_ascendv2__Amt_Paid_to_Date_Same_Desig_Roll_Up__c &gt;= 0, ( ucinn_ascendv2__Amt_Paid_to_Date_Same_Desig_Roll_Up__c &lt; ucinn_ascendv2__Amount__c )),
( ucinn_ascendv2__Amount__c - ucinn_ascendv2__Amt_Paid_to_Date_Same_Desig_Roll_Up__c ),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Amount Due Same Designation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>