force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Review_Transaction_v2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Review_Transaction_v2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Transaction (v2)</label>
    <referenceTo>ucinn_ascendv2__Review_Transaction_v2__c</referenceTo>
    <relationshipLabel>Designation Details</relationshipLabel>
    <relationshipName>Designation_Details_Review_Trans_v2</relationshipName>
    <type>Lookup</type>
</CustomField>