force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Session__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>ucinn_ascendv2__Session__c</referenceTo>
    <relationshipLabel>Designation Details</relationshipLabel>
    <relationshipName>Designation_Details_Session</relationshipName>
    <type>Lookup</type>
</CustomField>