force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Designation Details (Source Constituent)</relationshipLabel>
    <relationshipName>Designation_Details_Source_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>