force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Source_Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Payment</label>
    <referenceTo>ucinn_ascendv2__Payment__c</referenceTo>
    <relationshipLabel>Designation Details</relationshipLabel>
    <relationshipName>Designation_Details_Source_Payment</relationshipName>
    <type>Lookup</type>
</CustomField>