force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Surcharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Surcharge_Amount__c</fullName>
    <description>The surcharge amount for this Designation Detail.</description>
    <inlineHelpText>The surcharge amount for this Designation Detail.</inlineHelpText>
    <label>Surcharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>