force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Test_DD_Text__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Test_DD_Text__c</fullName>
    <label>Test DD Text (DEPRECATED)</label>
    <type>TextArea</type>
</CustomField>