force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/fields/ucinn_ascendv2__Test_Pull_From_Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Test_Pull_From_Designation__c</fullName>
    <label>Test Pull From Designation (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>