force-app/main/default/objects/ucinn_ascendv2__Designation_Detail__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>ucinn_ascendv2__Account__c</columns>
    <columns>ucinn_ascendv2__Contact__c</columns>
    <columns>ucinn_ascendv2__Amount__c</columns>
    <columns>ucinn_ascendv2__Opportunity__c</columns>
    <columns>ucinn_ascendv2__Acknowledgement_Description_Formula__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>